--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "express": "4.17.1",
     "mdn-browser-compat-data": "0.0.81",
     "pug": "2.0.3"
+  },
+  "engines": {
+    "node": ">= 12.0.0"
   }
 }
